[package]
name = "ovr-fp-evm"
version = "3.0.0"
license = "Apache-2.0"
edition = "2021"
description = "..."
homepage = "https://github.com/Overealityio/frontier"
repository = "https://github.com/Overealityio/frontier"

[dependencies]
evm = { git = "https://github.com/liyue201/evm", rev = "3e739c82cdada8108d145841759964e39af1d279", default-features = false, features = ["with-serde"] }
