[package]
name = "pallet-evm-test-vector-support"
version = "1.0.0-dev"
edition = "2021"

[dependencies]
evm = { version = "0.33.1", default-features = false, features = ["with-codec"] }
hex = { version = "0.4.3" }
serde = { version = "1.0.101", features = ["derive"] }
serde_json = { version = "1.0" }
fp-evm = { version = "3.0.0-dev", path = "../../../primitives/evm" }
