[package]
name = "ovr-evm-precompile-blake2"
version = "2.0.0"
edition = "2021"
description = "..."
license = "Apache-2.0"
homepage = "https://github.com/Overealityio/frontier"
repository = "https://github.com/Overealityio/frontier"

[dependencies]
fp-evm = { package = "ovr-fp-evm", version = "3.0.0" }

[dev-dependencies]
ovr-evm-test-vector-support = { version = "1.0.0", path = "../../test-vector-support" }
