[package]
name = "pallet-evm-precompile-bn128"
version = "2.0.0-dev"
edition = "2021"

[dependencies]
bn = { package = "substrate-bn", version = "0.6", default-features = false }
fp-evm = { version = "3.0.0-dev", path = "../../../../primitives/evm" }
sp-core = "6.0.0"

[dev-dependencies]
pallet-evm-test-vector-support = { version = "1.0.0-dev", path = "../../test-vector-support" }
