[package]
name = "ovr-evm-precompile-bn128"
version = "2.0.0"
edition = "2021"
description = "..."
license = "Apache-2.0"
homepage = "https://github.com/Overealityio/frontier"
repository = "https://github.com/Overealityio/frontier"

[dependencies]
bn = { package = "substrate-bn", version = "0.6", default-features = false }
fp-evm = { package = "ovr-fp-evm", version = "3.0.0" }
sp-core = "6.0.0"

[dev-dependencies]
ovr-evm-test-vector-support = { version = "1.0.0", path = "../../test-vector-support" }
