[package]
name = "ovr-evm-precompile-curve25519"
version = "1.0.0"
edition = "2021"
description = "..."
license = "Apache-2.0"
homepage = "https://github.com/Overealityio/frontier"
repository = "https://github.com/Overealityio/frontier"

[dependencies]
curve25519-dalek = { version = "4.0.0-pre.1", default-features = false, features = ["u64_backend", "alloc"] }
fp-evm = { package = "ovr-fp-evm", version = "3.0.0" }
