[package]
name = "pallet-evm-precompile-modexp"
version = "2.0.0-dev"
edition = "2021"

[dependencies]
num = { version = "0.4", features = ["alloc"], default-features = false }
fp-evm = { version = "3.0.0-dev", path = "../../../../primitives/evm" }

[dev-dependencies]
hex = "0.4.3"
pallet-evm-test-vector-support = { version = "1.0.0-dev", path = "../../test-vector-support" }
