[package]
name = "ovr-evm-precompile-modexp"
version = "2.0.0"
edition = "2021"
description = "..."
license = "Apache-2.0"
homepage = "https://github.com/Overealityio/frontier"
repository = "https://github.com/Overealityio/frontier"

[dependencies]
num = { version = "0.4", features = ["alloc"], default-features = false }
fp-evm = { package = "ovr-fp-evm", path = "../../../../primitives/evm" }

[dev-dependencies]
hex = "0.4.3"
ovr-evm-test-vector-support = { version = "1.0.0" }
