[package]
name = "ovr-evm-precompile-sha3fips"
version = "2.0.0"
edition = "2021"
description = "..."
license = "Apache-2.0"
homepage = "https://github.com/Overealityio/frontier"
repository = "https://github.com/Overealityio/frontier"

[dependencies]
tiny-keccak = { version = "2.0", features = ["fips202"] }
fp-evm = { package = "ovr-fp-evm", path = "../../../../primitives/evm" }
