[package]
name = "pallet-evm-precompile-simple"
version = "2.0.0-dev"
edition = "2021"

[dependencies]
ripemd = { version = "0.1", default-features = false }
sp-io = "6.0.0"
fp-evm = { version = "3.0.0-dev", path = "../../../../primitives/evm" }

[dev-dependencies]
pallet-evm-test-vector-support = { version = "1.0.0-dev", path = "../../test-vector-support" }
